# aroop

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  README  README.md  autogen.sh  configure.ac  libaroop.pc.in
aroop/: Makefile  TASKS.md  TODO  config.mk
aroop/codegen/: .gitignore  Makefile.am  aroopbasemodule.vala  aroopblockmodule.vala  aroopccodegenimpl.vala  aroopdelegatemodule.vala  arooperrormodule.vala  aroopmemberaccessmodule.vala  aroopmethodcallmodule.vala  aroopmethodmodule.vala  aroopobjectmodule.vala  aroopstructmodule.vala  config.vapi  valaarooparraymodule.vala  valaaroopassignmentmodule.vala  valaaroopbasemodule.vala  valaaroopblockmodule.vala  valaaroopccodegenimpl.vala  valaaroopcontrolflowmodule.vala  valaaroopdelegatemodule.vala  valaarooperrormodule.vala  valaaroopmemberaccessmodule.vala  valaaroopmethodcallmodule.vala  valaaroopmethodmodule.vala  valaaroopobjectmodule.vala  valaaroopstructmodule.vala  valaaroopvaluemodule.vala  valaccodearraymodule.vala  valaccodeassignmentmodule.vala  valaccodeattribute.vala  valaccodebasemodule.vala  valaccodecompiler.vala  valaccodedelegatemodule.vala  valaccodememberaccessmodule.vala  valaccodemethodcallmodule.vala  valaccodemethodmodule.vala  valaccodestructmodule.vala  valactype.vala  valainterfaceregisterfunction.vala  valatyperegisterfunction.vala
aroop/compiler/: .gitignore  Makefile.am  aroopcompiler.vala  config.vapi
aroop/compiler/junk/: valacompiler.vala
aroop/core/: .gitignore  Makefile  Makefile.am  README.md  aroop_core-1.0.pc.in  aroop_core.pc.in  config.mk  oldMakefile
aroop/core/aroop/: aroop_array.h  aroop_assignment.h  aroop_core.h  aroop_core_type_conversion.h  aroop_core_type_info.h  aroop_error.h  aroop_factory.h  aroop_int_type.h  aroop_memory_profiler.h
aroop/core/aroop/core/: config.h  logger.h  memory.h  txt.h  xtring.h
aroop/core/aroop/opp/: opp_any_obj.h  opp_factory.h  opp_factory_profiler.h  opp_factory_types.h  opp_hash.h  opp_hash_table.h  opp_indexed_list.h  opp_io.h  opp_iterator.h  opp_list.h  opp_queue.h  opp_rbtree_internal.h  opp_salt.h  opp_str2.h  opp_thread_main.h  opp_type.h  opp_watchdog.h
aroop/core/aroop/platform/android/inc/: android_config.h
aroop/core/aroop/platform/linux/: linux_config.h  linux_logger.h
aroop/core/aroop/platform/linux/inc/: linux_config.h
aroop/core/aroop/platform/raspberrypi/: raspberry_pi_bare_metal_config.h  raspberry_pi_bare_metal_logger.h
aroop/core/aroop_platform/android/inc/: android_logger.h
aroop/core/inc/: aroop_array.h  aroop_core.h  aroop_core_type_conversion.h  aroop_core_type_info.h  aroop_error.h  aroop_factory.h
aroop/core/inc/core/: config.h  logger.h  memory.h  thread.h  txt.h
aroop/core/inc/opp/: opp_any_obj.h  opp_factory.h  opp_factory_profiler.h  opp_factory_types.h  opp_hash.h  opp_hash_table.h  opp_indexed_list.h  opp_iterator.h  opp_list.h  opp_queue.h  opp_rbtree_internal.h  opp_thread_main.h  opp_type.h  opp_watchdog.h
aroop/core/src/: aroop_core.c  aroop_factory.c  aroop_txt.c  opp_any_obj.c  opp_factory.c  opp_factory_profiler.c  opp_hash.c  opp_hash_table.c  opp_indexed_list.c  opp_list.c  opp_queue.c  opp_rbtree_internal.c  opp_salt.c  opp_str2.c  opp_thread_main.c  opp_watchdog.c
aroop/core/vapi/: opp.vapi
aroop/vapi/: Makefile.am  README.md  aroop-1.0.deps  aroop-1.0.vapi  aroop_component-1.0.vapi  aroop_core-1.0.vapi  aroop_core.vapi  aroop_pthread-0.1.deps  aroop_pthread-0.1.vapi  aroop_unicode-0.1.vapi  arraylist.md  fakeglib.vapi  fakeglib2.vapi  hashtable.md  opp.vapi  oppfactory.md  opplist.md  posix-0.1.vapi  queue.md  str.md  xtring.md
ccode/: .gitignore  valaccodefile.vala  valaccodestruct.vala  valaccodevariabledeclarator.vala
codegen/: Makefile.am  valaaroopassignmentmodule.vala  valaaroopbasemodule.vala  valaaroopccodegenimpl.vala  valaaroopcontrolflowmodule.vala  valaaroopdelegatemodule.vala  valaaroopmemberaccessmodule.vala  valaaroopmethodcallmodule.vala  valaaroopmethodmodule.vala  valaaroopobjectmodule.vala  valaaroopstructmodule.vala  valaaroopvaluemodule.vala
codegenplug/: .gitignore  Makefile.am  README.md  aroopcodegenerator.vala  codegenplugattribute.vala  codegenplugbasemodule.vala  compilermodule.vala  csymbolresolve.vala  elementmodule.vala  objectmodule.vala  resolvesymbol.vala  sourceemittermodule.vala  sourcemodule.vala  structmodule.vala  tempvariablemodule.vala  valaccodeattribute.vala  valaccodecompiler.vala
codegenplug/expressions/: castexpressionmodule.vala  expressionmodule.vala
codegenplug/generator/: aroopcodegenerator.vala  aroopcodegeneratoradapter.vala  csymbolresolve.vala
codegenplug/statements/: declarationstatementmodule.vala  expressionstatementmodule.vala  returnstatementmodule.vala
codegenplug/symbols/: arraymodule.vala  assignmentmodule.vala  baseaccessmodule.vala  blockmodule.vala  castexpressionmodule.vala  cleanupmodule.vala  controlflowmodule.vala  delegatemodule.vala  elementmodule.vala  enummodule.vala  errormodule.vala  expressionmodule.vala  generictypemodule.vala  lambdaexpressionmodule.vala  literalmodule.vala  loadstoremodule.vala  localvariablemodule.vala  memberaccessmodule.vala  methodcallmodule.vala  methodmodule.vala  objectcreationmodule.vala  objectmodule.vala  parametermodule.vala  pointermodule.vala  postfixexpressionmodule.vala  propertymodule.vala  sourcefilemodule.vala  stringmodule.vala  structmodule.vala  unaryexpressionmodule.vala  valuemodule.vala
compiler/: Makefile.am  valacompiler.vala
gee/: .gitignore
gobject-introspection/: .gitignore
junk/: valaccodearraymodule.vala  valaccodeassignmentmodule.vala  valaccodeattribute.vala  valaccodecontrolflowmodule.vala  valaccodedelegatemodule.vala  valaccodememberaccessmodule.vala  valaccodemethodcallmodule.vala  valaccodemethodmodule.vala  valaccodestructmodule.vala  valaclassregisterfunction.vala  valactype.vala  valaenumregisterfunction.vala  valastructregisterfunction.vala  (+1 more)
shotodolplug/: .gitignore  Makefile.am  READEME.md  anyextension.vala  compositeextension.vala  extension.vala  hookextension.vala  interfaceextension.vala  module.vala  plugin.vala
(+345 files in other folders)
