NULL =

vapidir=${datarootdir}/vala-0.16/vapi
#vapidir = $(pkgdatadir)/vapi

dist_vapi_DATA = \
	aroop-1.0.vapi \
	aroop-1.0.deps \
	aroop_core-1.0.vapi \
	aroop_core-1.0.deps \
	aroop_pthread-0.1.vapi \
	aroop_pthread-0.1.deps \
	$(NULL)

dist_noinst_DATA = \
	$(NULL)

#BINDINGS = aroop-1.0 aroop_core-1.0 aroop_pthread-0.1

.PHONY: all-bindings $(BINDINGS)

#all-bindings: $(BINDINGS)

